fixed mobile search bar taking up space when not visible

--- a/application/frontend/src/components/Nav/NavBar.module.css
+++ b/application/frontend/src/components/Nav/NavBar.module.css
@@ -6,3 +6,9 @@
     box-shadow: var(--elevation-1);
 }
 
+@media (max-width: 450px){
+    .navbar{
+        justify-content: space-between;
+    }
+}
+
