--- a/application/frontend/src/components/Nav/NavBarLeft.module.css
+++ b/application/frontend/src/components/Nav/NavBarLeft.module.css
@@ -26,6 +26,3 @@
         width: 50px;
     }
 }
-
-@media (max-width: 1170px){
-}
