--- a/application/frontend/src/components/Nav/NavBarRight.module.css
+++ b/application/frontend/src/components/Nav/NavBarRight.module.css
@@ -139,6 +139,11 @@
 
 @media (max-width: 450px){
 
+    .navbar-right-login,
+    .navbar-right{
+        flex-basis: 50%;
+    }
+
     .search-icon{
         margin-right: 1rem;
     }
